fixing startup scripts