@@ -5,10 +5,14 @@ RESOLVED_HOME=$DIRNAME/../
 # first parameter - instance identifier
 # second parameter - heap size GB
 
+BAUK_INSTANCE_ID="0"
 
-if [ -n "$1" ]; then BAUK_INSTANCE_ID="$1"; BAUK_INSTANCE_ID="0"; fi
+if [ -n "$1" ]; then BAUK_INSTANCE_ID="$1"; fi
 
-if [ -n "$2" ]; then heapSizeGb="$2"; heapSizeGb="4"; fi
+
+heapSizeGb="4"
+
+if [ -n "$2" ]; then heapSizeGb="$2"; fi
 
 # where config file is, if not specified then default one will be used in $RESOLVED_HOME/config/feedConfig.xml
 BAUK_CONFIG_FILE_LOCATION="$RESOLVED_HOME/config/feedConfig.xml"
@@ -16,9 +20,10 @@ BAUK_CONFIG_FILE_LOCATION="$RESOLVED_HOME/config/feedConfig.xml"
 HEAP_OPTS="-Xmx${heapSizeGb}G -Xms${heapSizeGb}G"
 
 
-#GC_OPTS="-XX:+UseG1GC -XX:MaxGCPauseMillis=200 -verbose:gc "
+#GC_OPTS="-XX:+UseG1GC -XX:MaxGCPauseMillis=200 "
 GC_OPTS="-XX:+UseConcMarkSweepGC -XX:+CMSScavengeBeforeRemark -XX:+CMSParallelRemarkEnabled "
-JAVA_OPTS="-server -d64 -XX:+UseConcMarkSweepGC -XX:+CMSScavengeBeforeRemark -XX:+CMSParallelRemarkEnabled -XX:+UseCompressedOops -XX:+AggressiveOpts -XX:+UseStringCache -XX:+OptimizeStringConcat -XX:+UseBiasedLocking -XX:+UseFastAccessorMethods -XX:+UseFastEmptyMethods -XX:+TieredCompilation -XX:+DisableExplicitGC"
+#GC_OPTS="$GC_OPTS -verbose:gc "
+JAVA_OPTS="-server -d64 -XX:+UseCompressedOops -XX:+AggressiveOpts -XX:+UseStringCache -XX:+OptimizeStringConcat -XX:+UseBiasedLocking -XX:+UseFastAccessorMethods -XX:+UseFastEmptyMethods -XX:+TieredCompilation -XX:+DisableExplicitGC"
 JAVA_OPTS="$JAVA_OPTS -Dsun.rmi.dgc.server.gcInterval=3600000 -Dsun.rmi.dgc.client.gcInterval=3600000 -Djava.net.preferIPv4Stack=true"
 JAVA_OPTS="$JAVA_OPTS -DBAUK_INSTANCE_ID=$BAUK_INSTANCE_ID"
 JAVA_OPTS="$GC_OPTS $JAVA_OPTS"
